--- a/CardView/app/build.gradle
+++ b/CardView/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
-
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
 }
